--- a/css/index.css
+++ b/css/index.css
@@ -103,19 +103,82 @@ main {
     font-family:'Cormorant Infant', serif;
     color: var(--main-color);   
 }
-h3 {
+h2 {
     font-size: 50px;
     font-weight: bold;
 }
 
-h4 {
+h3 {
     font-size: 30px;
     }
 
-h5 {
+h4 {
     font-size: 35px;
 }
 footer {
     font-family: 'Cormorant Infant', serif;
     color: var(--main-color);
+}
+.box {
+    display: flex;
+    margin-top: 30px;
+    margin-bottom: 30px;
+    flex-direction: column;
+}
+@media (min-width: 768px) {
+    .box {
+        flex-direction: row;
+    }
+}
+.box > * {
+    flex: 1;
+    margin: 15px;
+
+}
+.card {
+    background-image: url(/img/model.jpg);
+    background-size: cover;
+    border-radius: 20px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    text-align: center;
+    padding: 15px;
+}
+.card p {
+    font-size: 20px;
+}
+.card .card-title {
+    font-size: 26px;
+    font-weight: bold;
+}
+.wooden-wall {
+    background-image: url(/img/original-wooden-wall.jpg);
+    background-size: cover;
+    min-height: 150px;
+}
+.greeting {
+    font-size: 30px;
+    font-weight: bold;
+    text-align: center;
+}
+.list {
+    font-size: 20px;
+    list-style-type: circle;
+}
+.gallery {
+    display: grid;
+    grid-gap: 30px 30px;
+    grid-template-columns: repeat(3, 1fr);
+    padding: 30px;
+}
+.gallery img {
+    max-width: 100%;
+    height: 100%;
+    width: 100%;
+    border-radius: 10px;
+}
+.large-image {
+    grid-column: span 2;
+    grid-row: span 2;
 }
