--- a/css/index.css
+++ b/css/index.css
@@ -1,7 +1,7 @@
-@import url('https://fonts.googleapis.com/css2?family=Cormorant+Infant:ital,wght@0,400;0,700;1,500&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Cormorant+Infant:ital,wght@0,400;0,700;1,500&display=fallback');
 :root {
     font-family: 'Cormorant Infant', serif;
-    background-image: url(../img/white-wall.jpg);
+    background-image: url(/img/white-wall.jpg);
     background-size: cover;
     scroll-behavior: smooth;
     height: 100%;
@@ -15,14 +15,27 @@ header {
     font-weight: 700;
     }
  /*css по плеєру*/
-   .audio-track {
-    width: 150px;
-    height: 3px;
-    background-color: #dddddd;
-    margin: auto;
-    position: relative;   
+   .audio-player {
+    width: 100%;
+    height: 2em;
+    background-color: rgba(221, 221, 221, 0.5);
+    position: fixed;
+    bottom: 0px;
+    display: flex;
+    align-items: center;
+    padding: 0.5em;
+    box-sizing: border-box;
+    left: 0;
 }
- 
+.audio-player button {
+    margin-left: 0.5em;
+}
+
+.audio-track {
+flex: 1 1 50%;
+background-color: aliceblue;
+}
+
 .time {
     width: 0;
     height: 3px;
@@ -76,6 +89,11 @@ header .menu a {
 header .menu a:hover {
     font-weight: bold;
     color: var(--accent-color);
+}
+
+.menu li {
+    padding-right: 0.5em;
+    white-space: nowrap;
 }
 
 @media (min-width:740px) {
@@ -191,4 +209,11 @@ footer {
 .large-image {
     grid-column: span 2;
     grid-row: span 2;
+}
+
+.clock {
+    width: 90px;
+    position: absolute;
+    right: 0;
+    top: 0;
 }
