--- a/css/index.css
+++ b/css/index.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Cormorant+Infant:ital,wght@0,400;0,700;1,500&display=fallback');
 :root {
     font-family: 'Cormorant Infant', serif;
-    background-image: url(../img/white-wall.jpg);
+    background-image: url(../img/white-background.jpg);
     background-size: cover;
     scroll-behavior: smooth;
     height: 100%;
